@@ -1,5 +1,7 @@
 2010-04-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* generator/summaryET.sh: Create file summary for each parameter setting.
+
 	* generator/runScriptET.sh: Run benchmark for a topology.
 
 	* generator/genTopologyCore.sh: Renaming from generator/genExampleCore.sh.
